[gd_scene load_steps=8 format=3 uid="uid://o87qjfcjv1ns"]

[ext_resource type="Script" path="res://Scenes/ui.gd" id="1_olka7"]
[ext_resource type="Texture2D" uid="uid://b47v4ojdthm20" path="res://Assets/equation (1).png" id="1_pbsfw"]
[ext_resource type="Texture2D" uid="uid://dvb7voxeu77aq" path="res://Assets/Function.png" id="1_rre4d"]
[ext_resource type="PackedScene" uid="uid://t1n8lk48p156" path="res://Scenes/Box_folded_animation.tscn" id="1_vv84u"]
[ext_resource type="PackedScene" uid="uid://dmmnymbts27dl" path="res://Scenes/graph.tscn" id="2_c7ado"]
[ext_resource type="FontFile" uid="uid://bhuw12vl5wow3" path="res://Assets/Fonts/cmu.serif-roman.ttf" id="3_wvk64"]
[ext_resource type="Texture2D" uid="uid://cfp6ali8hiyyq" path="res://Assets/Function_value.png" id="5_ngh6v"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_olka7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
min_value = 0.5
max_value = 4.3
step = 0.1
value = 3.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/CenterContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2/CenterContainer2/Container"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_pbsfw")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/CenterContainer2/Container"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wvk64")
theme_override_font_sizes/font_size = 32
text = "3"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer"]
clip_contents = true
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("1_rre4d")
expand_mode = 1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
custom_minimum_size = Vector2(90, 30)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_ngh6v")
expand_mode = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wvk64")
theme_override_font_sizes/font_size = 32
text = "3"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/CenterContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/CenterContainer/HBoxContainer/CenterContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(550, 550)
render_target_update_mode = 4

[node name="Main" parent="VBoxContainer/CenterContainer/HBoxContainer/CenterContainer/SubViewportContainer/SubViewport" node_paths=PackedStringArray("slider") instance=ExtResource("1_vv84u")]
slider = NodePath("../../../../../../HSlider")

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/CenterContainer/HBoxContainer"]
modulate = Color(0.223103, 0.223103, 0.223103, 1)
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="SubViewportContainer2" type="SubViewportContainer" parent="VBoxContainer/CenterContainer/HBoxContainer/CenterContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/CenterContainer/HBoxContainer/CenterContainer2/SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(550, 550)
render_target_update_mode = 4

[node name="Graph" parent="VBoxContainer/CenterContainer/HBoxContainer/CenterContainer2/SubViewportContainer2/SubViewport" node_paths=PackedStringArray("slider") instance=ExtResource("2_c7ado")]
slider = NodePath("../../../../../../HSlider")

[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
